--- a/mainnet/2025-07-13-budget-2025/EC/EC-0014-25-gerolamo/EC-0014-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0014-25-gerolamo/EC-0014-25.jsonld.md
@@ -1,14 +1,12 @@
 # Title
 
-Withdraw ₳1,161,000 for zkFold ZK Rollup administered by Intersect
+Withdraw ₳578,571 for Gerolamo - Cardano node in typescript
 
 # Abstract
 
-This treasury withdrawal funds zkFold ZK Rollup which will provide the following services:
+This treasury withdrawal funds **Gerolamo - Cardano node in typescript** which will provide the following services:
 
-ZK rollups address the scalability problem. Hundreds of transactions can be submitted as a single batch, reducing the load on the L1. Cardano can achieve higher throughput and lower transaction costs.
-
-zkFold offers to build a general-purpose zero knowledge rollup solution for Cardano. A zero knowledge rollup is a technological layer (Layer 2) on top of a blockchain that increases the blockchain's scalability potential by compressing many transactions into transaction batches. As batches offer a greater degree of information compression, it is reasonable to expect that hundreds of rollup smart contract transactions might fit into a single Cardano mainnet transaction. Zero knowledge proofs technology places a limit on the cost of on-chain verification of the validity of transaction batches. Specifically, the batch verification fits well within the Execution Unit limits set at the protocol level, as demonstrated by the prototype created by the zkFold team.
+A node that can run in the browser.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -16,31 +14,27 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 # Motivation
 
-This proposal aims to solve the following problem:
+A Typescript node would benefit the ecosystem in many ways:
 
-Scalability is a challenge for Cardano. As it grows, more dApps and users join, the demand for processing capacity increases, leading to congestion, slower transaction times, and higher fees.
+- Remove the ivory tower: make it easier for new developers to understand the protocol internals and contribute to the growth of Cardano.
+
+- Truly decentralized applications: every application that wants to interact with cardano needs access to a cardano node somewhere. without a local node (that requires technical expertise and is usually resource intensive) the only solution adopted is to have a centralized server hosting a node that clients access. a light node in the browser would allow everyone trustless access to the Cardano protocol in the most secure and decentralized way.
 
 # Rationale
 
 ### Project Solution
 
-zkFold will develop and implement ZK rollups on Cardano to scale it efficiently, promoting broader adoption and supporting an ecosystem of decentralized applications and services.
+The goal is to have a fully functional light node that can run in the browser and can be integrated in dApps and wallets.
 
-Overall, the proposal will have the following positive impact on the Cardano ecosystem:
+- Users, trustless and more scalable applications
 
-- Improved Scalability: ZK rollups enable Cardano to process significantly more transactions per second (TPS) by bundling and verifying transactions off-chain. This reduces congestion, benefiting users by ensuring faster and more efficient dApp interactions.
+- Experienced developers, local nodes means less infrastructure and easier access to Cardano
 
-- Lower Transaction Costs: By reducing the number of transactions directly processed on-chain, ZK rollups lower the transaction fees, making Cardano more accessible and affordable, especially for smaller transactions or micro-payments.
-
-- Enhanced User Experience: Lower fees create a smoother experience for users interacting with dApps, decentralized finance (DeFi) platforms, and NFT marketplaces.
-
-- Increased Adoption: ZK rollups can make the Cardano ecosystem more attractive for developers and users, promoting the growth of dApps, DeFi, and other blockchain applications by offering higher performance and scalability.
-
-- Maintained Security: ZK rollups allow for scalability improvements without compromising the security and decentralization of the Cardano base layer, as Cardano still plays the role of the settlement layer for the rollup transactions.
+- New developers, a familiar source code means more resources to understand what Cardano does
 
 ### Vendor Profile
 
-zkFold team has successfully moving towards the TestNet of our ZK Rollup. The zkFold team consists of expert Haskell, Rust, and ZKP developers and Cryptographers.
+[https://github.com/HarmonicLabs](https://github.com/HarmonicLabs)
 
 ### Contract Management
 
@@ -106,7 +100,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d1c4)
+- [Harmonic Labs Gerolamo GitHub Repository](https://github.com/HarmonicLabs/gerolamo)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d27e)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
