--- a/mainnet/2025-07-13-budget-2025/EC/EC-0016-25-tweag/EC-0016-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0016-25-tweag/EC-0016-25.jsonld.md
@@ -1,12 +1,38 @@
 # Title
 
-Withdraw ₳220,914 for UTxO RPC: Sustaining Cardano Blockchain Integration
+Withdraw ₳11,070,323 for TWEAG's Proposals for multiple core budget project...
 
 # Abstract
 
-This treasury withdrawal funds **UTxO RPC: Sustaining Cardano Blockchain Integration** which will provide the following services:
+This treasury withdrawal funds **TWEAG's Proposals for multiple core budget projects for Cardano 2025** which will provide the following services:
 
-This request for support focuses on UTxO RPC [https://utxorpc.org](https://utxorpc.org) an interface specification designed to simplify interactions with UTxO-based blockchains. U5C defines standardized methods, data structures, and communication patterns. By providing a range of SDKs, and offering thorough documentation, U5C enhances reusability, interoperability, and performance in blockchain integrations. Currently in its early stages, UTxO RPC is already being adopted by key projects in the Cardano ecosystem, including Lace, Mesh, Amaru, and many others. As an open-source initiative, it welcomes contributions from the community, fostering a collaborative approach to improving blockchain infrastructure. To support its ongoing development, maintenance, and enhancements, we are requesting funding for the following roles: 0.5 FTE blockchain developer and 0.125 FTE tech lead.
+A suite of core infrastructure projects aimed at advancing the technical foundations of the Cardano blockchain. These initiatives focus on novel, high-impact developments across key areas of the Cardano stack. In the months ahead, Tweag intends to collaborate closely with qualified suppliers, DReps, and Intersect to further shape the structure and scope of these engagements.
+
+The proposals presented here represent Tweag's intended contribution to Cardano's continued evolution. We invite other ecosystem participants to submit complementary or competitive proposals, and we are open to exploring collaborative partnerships where aligned. Below is a list of the proposals:
+
+1.  Peras (partial)
+
+2.  Canonical Ledger State
+
+3.  Black box Ledger Conformance Testing
+
+4.  Conformance Testing of Consensus
+
+5.  Plutus Script Re-Executor
+
+6.  Genesis Sync Accelerator
+
+7.  Canonical Block and Transaction Diffusion Codecs
+
+8.  Hoarding Node
+
+9.  Block Cost Investigation
+
+10. Cardano-node-emulator: Maintenance proposal
+
+11. History Expiry
+
+If implemented, this proposal will deliver transformative technical value to the Cardano ecosystem, accelerating development across critical areas of the network stack. The proposed initiatives---ranging from ledger conformance testing and Plutus re-execution tooling, to Genesis synchronization optimization, history expiry, and the development of a Cardano node emulator---are strategically aligned with Cardano's long-term goals of scalability, performance, and verifiability.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -16,31 +42,53 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-UTxO RPC simplifies interactions with UTxO-based blockchains by providing a standardized interface for blockchain integrations. It enhances interoperability, reusability, and performance for developers, and has already seen adoption by major Cardano projects like Lace, Mesh, and Amaru. To fully unlock its potential for the Cardano community, UTxO RPC requires ongoing maintenance and enhancements. This proposal seeks funding to keep it active, up-to-date, and aligned with the evolving needs of the ecosystem.
+Backed by Tweag by Modus Create and a consortium of trusted ecosystem contributors, this proposal combines deep technical experience with proven delivery capability. It not only addresses current pain points but lays the groundwork for Cardano's continued success as a scalable, decentralized, and open blockchain platform.
+
+Each project targets a specific technical challenge within the core infrastructure:
+
+- Peras, Canonical Ledger State, and Canonical Block and Transaction Diffusion Codecs improve interoperability, clarity, and consistency across the ecosystem.
+
+- Conformance Testing for Ledger and Consensus, alongside Black Box Ledger Testing, ensures protocol correctness and future-proofing through robust validation frameworks.
+
+- Plutus Script Re-Executor and Block Cost Investigation provide practical tools for performance benchmarking and Plutus optimization, directly benefiting DApp developers and toolmakers.
+
+- The Genesis Sync Accelerator and Hoarding Node address network-level performance bottlenecks, improving bootstrap times and reliability.
+
+- The Cardano-node-emulator and History Expiry initiative contribute to better testing, debugging, and long-term node sustainability.
+
+- Collectively, these projects support developers, researchers, node operators, DReps, and governance actors by reinforcing the reliability, performance, and maintainability of Cardano's core systems.
+
+The return on investment to the Cardano community is clear:
+
+- Faster network upgrades
+
+- Reduced onboarding friction
+
+- Improved protocol transparency
+
+- Better tooling for smart contract teams
+
+- More resilient and testable infrastructure
 
 # Rationale
 
 ### Project Solution
 
-Securing funding for UTxO RPC ensures it remains actively maintained and continues to evolve with the Cardano ecosystem's needs. Ongoing updates, performance improvements, and new feature development will ensure the interface stays relevant and effective. This support will help simplify blockchain integrations, reduce complexity for developers, and improve overall performance, making it easier for new projects to adopt UTxO RPC. With continued maintenance, UTxO RPC can better serve the ecosystem and support long-term developer needs.
+A suite of core infrastructure projects aimed at advancing the technical foundations of the Cardano blockchain. These initiatives focus on novel, high-impact developments across key areas of the Cardano stack. In the months ahead, Tweag intends to collaborate closely with qualified suppliers, DReps, and Intersect to further shape the structure and scope of these engagements.
 
 ### Vendor Profile
 
-TxPipe is an active member of the Cardano ecosystem
+At Tweag by Modus Create, we offer a unique combination of deep technical expertise and strategic consulting capabilities, with a long-standing commitment to open-source and decentralized systems. EURL Tweag has been in business for over a decade, having started in 2013, and has built a reputation for engineering excellence across critical infrastructure projects.
 
-TxPipe has been developing open-source tools for the Cardano ecosystem for over 3 years and we're not going anywhere. Evidence of our commitment can be found by evaluating the continuous activity of our public code repositories.
+Since January 2018, we have been continuously engaged with IOG (Input Output Global) on a variety of initiatives within the Cardano ecosystem, including conducting audits and core protocol development. Since May 2021, we have also provided formal audits for the Cardano ecosystem, helping to ensure the reliability and security of mission-critical code.
 
-Experience developing in the Cardano ecosystem
+Our team has played a leading role in the development of Cardano's core infrastructure, including leading the consensus and ledger teams, implementing the Ouroboros Genesis protocol, and contributing to the design of Ouroboros Peras. We have been involved in nearly all aspects of the core Cardano node, giving us a comprehensive understanding of the system's architecture, roadmap, and strategic direction.
 
-TxPipe has helped developed several dApps for the Cardano ecosystem. This experience allows us to evaluate the feasibility of the project and its potential benefit from a developer's perspective. We've also participated in development of chains using the released version of the IOG's Partnerchain SDK.
+Beyond Cardano, we bring deep, practical experience with Haskell, Rust, and a wide range of technologies used in polyglot projects, enabling us to engineer scalable, secure, and high-performance systems across domains.
 
-Successful Catalyst proposals
+As part of Modus Create, a global digital transformation consulting firm, we are backed by a diverse team of strategists, designers, and technologists who help the world's leading brands build digital advantage. Modus Create specializes in strategic consulting, full lifecycle product development, platform modernization, and digital operations and is an official partner of top-tier technology providers such as Atlassian, AWS, and GitHub. This global reach and cross-disciplinary strength provide our clients with unmatched capabilities throughout the full product development lifecycle.
 
-We have successfully completed several Catalyst proposals. This may serve as evidence that our team has the required capabilities to fulfill these type of projects.
-
-Development process will be public and open-source
-
-Both the output and the development process will be public and open-source. This approach provides an easy way for the Catalyst team and the Cardano community to evaluate the progress at each step of the process.
+This proposal reflects our ongoing commitment to advancing Cardano's mission through rigorous engineering, strategic alignment, and high-impact delivery.
 
 ### Contract Management
 
@@ -106,8 +154,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [TxPipe UTxO RPC Github Repository](https://github.com/utxorpc)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d298)
+- [Tweag 2025 Budget Proposal (PDF)](ipfs://bafybeifyxriekqi6ond6k5c4spgbpgw7ijeecud6spw73lfwjsbuktwbsq)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d24e)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
