--- a/mainnet/2025-07-13-budget-2025/EC/EC-0020-25-scalus/EC-0020-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0020-25-scalus/EC-0020-25.jsonld.md
@@ -1,12 +1,26 @@
 # Title
 
-Withdraw ₳220,914 for UTxO RPC: Sustaining Cardano Blockchain Integration
+Withdraw ₳657,692 for Scalus - DApps Development Platform
 
 # Abstract
 
-This treasury withdrawal funds **UTxO RPC: Sustaining Cardano Blockchain Integration** which will provide the following services:
+This treasury withdrawal funds **Scalus - DApps Development Platform** which will provide the following services:
 
-This request for support focuses on UTxO RPC [https://utxorpc.org](https://utxorpc.org) an interface specification designed to simplify interactions with UTxO-based blockchains. U5C defines standardized methods, data structures, and communication patterns. By providing a range of SDKs, and offering thorough documentation, U5C enhances reusability, interoperability, and performance in blockchain integrations. Currently in its early stages, UTxO RPC is already being adopted by key projects in the Cardano ecosystem, including Lace, Mesh, Amaru, and many others. As an open-source initiative, it welcomes contributions from the community, fostering a collaborative approach to improving blockchain infrastructure. To support its ongoing development, maintenance, and enhancements, we are requesting funding for the following roles: 0.5 FTE blockchain developer and 0.125 FTE tech lead.
+Developing DApps on Cardano shouldn't require juggling multiple languages, libraries and frameworks.
+
+Scalus changes this by bringing the power of Scala 3 to the Cardano ecosystem, letting you write smart contracts, build transactions, and application layers --- all with the same language and familiar tools.
+
+It supports the complete development flow - setup, development, testing, debugging and deployment, backed by an industry-grade toolset and professional development experience.
+
+Key benefits that make Scalus + Scala 3 stand out:
+
+- Productivity boost at scale with Scala 3
+
+- Reduced time-to-market - from prototyping to production in less time
+
+- Deep pool of Scala/Java/Kotlin talent available on the market
+
+Scalus is a Cardano DApps development platform made for professionals and businesses who want to get things done.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -16,31 +30,69 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-UTxO RPC simplifies interactions with UTxO-based blockchains by providing a standardized interface for blockchain integrations. It enhances interoperability, reusability, and performance for developers, and has already seen adoption by major Cardano projects like Lace, Mesh, and Amaru. To fully unlock its potential for the Cardano community, UTxO RPC requires ongoing maintenance and enhancements. This proposal seeks funding to keep it active, up-to-date, and aligned with the evolving needs of the ecosystem.
+Building DApps on Cardano remains harder than it should be. New developers need to invest a substantial amount of time to become productive. It makes Cardano less attractive to build on, and limits the ability to innovate and produce value to end users.
+
+New developers face multiple obstacles:
+
+1. Steep technical learning curve
+
+2. Fragmented technology stack (on-chain/off-chain, front-end/back-end)
+
+3. Limited development tooling and standard libraries
+
+4. Scattered educational resources
+
+In anticipation of the wider adoption of Cardano technology by traditional organisations (e.g., in finance and fintech, where Java and Scala are dominant), it should be simpler for their web2 developers to start building on Cardano. Companies need a smooth path for their existing teams --- without the need to learn new programming languages or hire specialists just to get started.
 
 # Rationale
 
 ### Project Solution
 
-Securing funding for UTxO RPC ensures it remains actively maintained and continues to evolve with the Cardano ecosystem's needs. Ongoing updates, performance improvements, and new feature development will ensure the interface stays relevant and effective. This support will help simplify blockchain integrations, reduce complexity for developers, and improve overall performance, making it easier for new projects to adopt UTxO RPC. With continued maintenance, UTxO RPC can better serve the ecosystem and support long-term developer needs.
+(1) Benefits for professionals
+
+Scalus meets developers where they are. It bridges Web2 engineers from traditional firms with progressive onboarding and built-in safety, while giving seasoned Cardano builders advanced control and optimisations.
+
+Web 2 developers:
+
+- Familiar dev experience & tooling using Scala
+
+- Elegant syntax with gentle learning curve of blockchain specifics
+
+- Built-in safety controls to reduce common mistakes and risks
+
+Cardano builders / R&D Labs:
+
+- Low-level optimisations (memory, cost, advanced patterns)
+
+- Expressiveness beyond limited DSL
+
+- Advanced features (macros, meta-programming)
+
+- Rich Scala ecosystem for complex protocols and mission-critical solutions
+
+(2) Benefits for businesses
+
+Scalus, paired with Scala 3, helps businesses build on Cardano without the usual headaches. It's a practical way to deliver value quickly and reliably.
+
+Benefits:
+
+- Productivity boost at scale with Scala 3
+
+- Reduced time-to-market - from prototyping to production in less time
+
+- Deep pool of Scala/Java/Kotlin talent available on the market
+
+- Code quality and safety are first-class citizens
+
+- Reduced training investments to transition Scala/Java/Kotlin teams to blockchain
 
 ### Vendor Profile
 
-TxPipe is an active member of the Cardano ecosystem
+Oleksandr Nemish is a seasoned software engineer with a specialised focus on functional programming, type theory, meta-programming, compilers, and blockchains. His expertise is underscored by his proficiency in languages such as Scala, Haskell and Rust.
 
-TxPipe has been developing open-source tools for the Cardano ecosystem for over 3 years and we're not going anywhere. Evidence of our commitment can be found by evaluating the continuous activity of our public code repositories.
+Oleksandr has a robust professional background, having worked for prominent financial organisations like Deutsche Bank and UBS.
 
-Experience developing in the Cardano ecosystem
-
-TxPipe has helped developed several dApps for the Cardano ecosystem. This experience allows us to evaluate the feasibility of the project and its potential benefit from a developer's perspective. We've also participated in development of chains using the released version of the IOG's Partnerchain SDK.
-
-Successful Catalyst proposals
-
-We have successfully completed several Catalyst proposals. This may serve as evidence that our team has the required capabilities to fulfill these type of projects.
-
-Development process will be public and open-source
-
-Both the output and the development process will be public and open-source. This approach provides an easy way for the Catalyst team and the Cardano community to evaluate the progress at each step of the process.
+Oleksandr Nemish is a former engineer at IOG, the engineering company behind the Cardano blockchain. He worked on the design and implementation of Marlowe -- a new financial smart contracts programming language for Cardano.
 
 ### Contract Management
 
@@ -106,8 +158,10 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [TxPipe UTxO RPC Github Repository](https://github.com/utxorpc)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d298)
+- [Scalus - Presentation Slides v.1.1 (PDF)](ipfs://bafybeifg7ormly4v5ltigrcghrvbqjauwcwyknvcoc6fmp2qewp4vxojjm)
+- [Scalus - Budget breakdown + Milestones (PDF)](ipfs://bafkreicpkgopfmo7trp27xslqoih3dadfjp7exsgq6a7g6lgi7zcgp56lq)
+- [Scalus - Website](https://scalus.org/)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d1f6)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
