--- a/mainnet/2025-07-13-budget-2025/EC/EC-0021-25-cexporer/EC-0021-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0021-25-cexporer/EC-0021-25.jsonld.md
@@ -1,12 +1,20 @@
 # Title
 
-Withdraw ₳220,914 for UTxO RPC: Sustaining Cardano Blockchain Integration
+Withdraw ₳266,667 for Cexplorer.io -- Developer-Focused Blockchain Explorer...
 
 # Abstract
 
-This treasury withdrawal funds **UTxO RPC: Sustaining Cardano Blockchain Integration** which will provide the following services:
+This treasury withdrawal funds **Cexplorer.io -- Developer-Focused Blockchain Explorer for Cardano** which will provide the following services:
 
-This request for support focuses on UTxO RPC [https://utxorpc.org](https://utxorpc.org) an interface specification designed to simplify interactions with UTxO-based blockchains. U5C defines standardized methods, data structures, and communication patterns. By providing a range of SDKs, and offering thorough documentation, U5C enhances reusability, interoperability, and performance in blockchain integrations. Currently in its early stages, UTxO RPC is already being adopted by key projects in the Cardano ecosystem, including Lace, Mesh, Amaru, and many others. As an open-source initiative, it welcomes contributions from the community, fostering a collaborative approach to improving blockchain infrastructure. To support its ongoing development, maintenance, and enhancements, we are requesting funding for the following roles: 0.5 FTE blockchain developer and 0.125 FTE tech lead.
+Cexplorer.io is a high-performance, feature-rich blockchain explorer designed specifically for the Cardano ecosystem. It offers deep on-chain insights, real-time data access, and powerful tools for developers, stake pool operators, and users. With over 50,000 monthly users and millions of processed data requests, Cexplorer.io has become a trusted resource in the Cardano community.
+
+This proposal seeks funding to ensure the long-term sustainability of the platform through infrastructure maintenance and continuous improvement. It includes two key areas:
+
+BAU/Maintenance -- Covering costs for server infrastructure, backend/frontend development, and bug fixes to ensure stability, uptime, and security.
+
+Enhancements & New Features -- Expanding the team with additional developers and a UI designer to deliver a better user experience, improved performance, and new developer-oriented features.
+
+Our mission is to provide a scalable, developer-friendly explorer that empowers the Cardano community with transparent, accessible, and actionable data. By supporting this proposal, Intersect and the broader community invest in critical infrastructure that enhances transparency, encourages innovation, and reduces friction for anyone building on or interacting with Cardano.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -16,31 +24,23 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-UTxO RPC simplifies interactions with UTxO-based blockchains by providing a standardized interface for blockchain integrations. It enhances interoperability, reusability, and performance for developers, and has already seen adoption by major Cardano projects like Lace, Mesh, and Amaru. To fully unlock its potential for the Cardano community, UTxO RPC requires ongoing maintenance and enhancements. This proposal seeks funding to keep it active, up-to-date, and aligned with the evolving needs of the ecosystem.
+The Cardano ecosystem lacks a powerful, developer-friendly explorer with advanced features, real-time insights, and flexible tools for building on-chain apps. Cexplorer.io aims to fill this gap by providing deep data access, improved UX, and ongoing enhancements to support the growing needs of users and developers.
 
 # Rationale
 
 ### Project Solution
 
-Securing funding for UTxO RPC ensures it remains actively maintained and continues to evolve with the Cardano ecosystem's needs. Ongoing updates, performance improvements, and new feature development will ensure the interface stays relevant and effective. This support will help simplify blockchain integrations, reduce complexity for developers, and improve overall performance, making it easier for new projects to adopt UTxO RPC. With continued maintenance, UTxO RPC can better serve the ecosystem and support long-term developer needs.
+Cexplorer.io serves over 50,000 monthly users and processes millions of data requests, providing real-time, in-depth insights into Cardano's blockchain. It supports developers, SPOs, researchers, and everyday users with tools for exploring transactions, addresses, tokens, and stake pools. By improving transparency and accessibility, it reduces friction in dApp development, stake pool monitoring, and ecosystem analysis. The return on investment is a proven, high-traffic platform that continuously evolves to meet the growing demands of the Cardano community.
 
 ### Vendor Profile
 
-TxPipe is an active member of the Cardano ecosystem
+Cexplorer.io (formerly Adapools) has been live since 2020, serving over 50,000 monthly users and handling millions of data requests each month.
 
-TxPipe has been developing open-source tools for the Cardano ecosystem for over 3 years and we're not going anywhere. Evidence of our commitment can be found by evaluating the continuous activity of our public code repositories.
+- The team has strong experience in backend systems, frontend development, API design, and DevOps, specifically tailored to Cardano's architecture (e.g., DB-Sync, Cardano Node, CIPs).
 
-Experience developing in the Cardano ecosystem
+- Proven ability to maintain high availability, fast performance, and implement continuous improvements based on real user feedback.
 
-TxPipe has helped developed several dApps for the Cardano ecosystem. This experience allows us to evaluate the feasibility of the project and its potential benefit from a developer's perspective. We've also participated in development of chains using the released version of the IOG's Partnerchain SDK.
-
-Successful Catalyst proposals
-
-We have successfully completed several Catalyst proposals. This may serve as evidence that our team has the required capabilities to fulfill these type of projects.
-
-Development process will be public and open-source
-
-Both the output and the development process will be public and open-source. This approach provides an easy way for the Catalyst team and the Cardano community to evaluate the progress at each step of the process.
+- The team is fully equipped to ensure long-term support, stability, and delivery of new features in a rapidly evolving ecosystem.
 
 ### Contract Management
 
@@ -106,8 +106,7 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [TxPipe UTxO RPC Github Repository](https://github.com/utxorpc)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d298)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d27c)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
