--- a/mainnet/2025-07-13-budget-2025/EC/EC-0015-25-plutarch/EC-0015-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0015-25-plutarch/EC-0015-25.jsonld.md
@@ -1,12 +1,12 @@
 # Title
 
-Withdraw ₳220,914 for UTxO RPC: Sustaining Cardano Blockchain Integration
+Withdraw ₳243,478 for MLabs Core Tool Maintenance & Enhancement: Plutarch
 
 # Abstract
 
-This treasury withdrawal funds **UTxO RPC: Sustaining Cardano Blockchain Integration** which will provide the following services:
+This treasury withdrawal funds **MLabs** **Core Tool Maintenance & Enhancement: Plutarch** which will provide the following services:
 
-This request for support focuses on UTxO RPC [https://utxorpc.org](https://utxorpc.org) an interface specification designed to simplify interactions with UTxO-based blockchains. U5C defines standardized methods, data structures, and communication patterns. By providing a range of SDKs, and offering thorough documentation, U5C enhances reusability, interoperability, and performance in blockchain integrations. Currently in its early stages, UTxO RPC is already being adopted by key projects in the Cardano ecosystem, including Lace, Mesh, Amaru, and many others. As an open-source initiative, it welcomes contributions from the community, fostering a collaborative approach to improving blockchain infrastructure. To support its ongoing development, maintenance, and enhancements, we are requesting funding for the following roles: 0.5 FTE blockchain developer and 0.125 FTE tech lead.
+This proposal seeks funding for the ongoing annual maintenance and feature enhancement of Plutarch, a production-grade eDSL in Haskell for creating Cardano smart contracts. As a core tool widely adopted within the ecosystem, Plutarch requires consistent upkeep. Funding covers maintenance (bug fixes, compatibility updates for hardforks) and new feature implementation based on community needs (e.g., via GitHub issues). This ensures Plutarch remains resilient, powerful, and up-to-date, supporting developers and the ecosystem.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -16,31 +16,17 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-UTxO RPC simplifies interactions with UTxO-based blockchains by providing a standardized interface for blockchain integrations. It enhances interoperability, reusability, and performance for developers, and has already seen adoption by major Cardano projects like Lace, Mesh, and Amaru. To fully unlock its potential for the Cardano community, UTxO RPC requires ongoing maintenance and enhancements. This proposal seeks funding to keep it active, up-to-date, and aligned with the evolving needs of the ecosystem.
+As a core production-grade tool for Cardano smart contracts, Plutarch requires consistent upkeep and enhancements to align with network growth and upcoming hardforks. This proposal addresses the need for dedicated funding to maintain Plutarch's resilience, add features, and ensure ongoing compatibility, supporting developers and strengthening the ecosystem. Without dedicated funding, this essential tool risks becoming outdated, hindering developer productivity.
 
 # Rationale
 
 ### Project Solution
 
-Securing funding for UTxO RPC ensures it remains actively maintained and continues to evolve with the Cardano ecosystem's needs. Ongoing updates, performance improvements, and new feature development will ensure the interface stays relevant and effective. This support will help simplify blockchain integrations, reduce complexity for developers, and improve overall performance, making it easier for new projects to adopt UTxO RPC. With continued maintenance, UTxO RPC can better serve the ecosystem and support long-term developer needs.
+This proposal ensures Plutarch remains robust, up-to-date, and supported, benefiting Cardano developers and dApp projects who rely on it. The value is a more stable, efficient development environment, fostering innovation. The ROI includes increased developer productivity, enhanced dApp quality, and overall ecosystem health through maintained core infrastructure. Plutarch's wide adoption demonstrates its value.
 
 ### Vendor Profile
 
-TxPipe is an active member of the Cardano ecosystem
-
-TxPipe has been developing open-source tools for the Cardano ecosystem for over 3 years and we're not going anywhere. Evidence of our commitment can be found by evaluating the continuous activity of our public code repositories.
-
-Experience developing in the Cardano ecosystem
-
-TxPipe has helped developed several dApps for the Cardano ecosystem. This experience allows us to evaluate the feasibility of the project and its potential benefit from a developer's perspective. We've also participated in development of chains using the released version of the IOG's Partnerchain SDK.
-
-Successful Catalyst proposals
-
-We have successfully completed several Catalyst proposals. This may serve as evidence that our team has the required capabilities to fulfill these type of projects.
-
-Development process will be public and open-source
-
-Both the output and the development process will be public and open-source. This approach provides an easy way for the Catalyst team and the Cardano community to evaluate the progress at each step of the process.
+MLabs LTD is the primary developer and maintainer of Cardano.nix. Our team possesses deep expertise in Nix, Cardano infrastructure deployment, and maintaining complex build systems, evidenced by the successful delivery and maintenance of Cardano.nix and its use by key ecosystem entities.
 
 ### Contract Management
 
@@ -106,8 +92,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [TxPipe UTxO RPC Github Repository](https://github.com/utxorpc)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d298)
+- [Plutonomicon Plutarch Plutus GitHub Repository](https://github.com/Plutonomicon/plutarch-plutus/)
+- [Plutonomicon Plutarch Plutus Website - <https://plutonomicon.github.io/plutarch-plutus/> Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d28a)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
