--- a/mainnet/2025-07-13-budget-2025/EC/EC-0019-25-bloxbean/EC-0019-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EC/EC-0019-25-bloxbean/EC-0019-25.jsonld.md
@@ -1,12 +1,38 @@
 # Title
 
-Withdraw ₳220,914 for UTxO RPC: Sustaining Cardano Blockchain Integration
+Withdraw ₳99,600 for BloxBean Java Tools Maintenance and Enhancement
 
 # Abstract
 
-This treasury withdrawal funds **UTxO RPC: Sustaining Cardano Blockchain Integration** which will provide the following services:
+This treasury withdrawal funds **BloxBean** **Java Tools Maintenance and Enhancement** which will provide the following services:
 
-This request for support focuses on UTxO RPC [https://utxorpc.org](https://utxorpc.org) an interface specification designed to simplify interactions with UTxO-based blockchains. U5C defines standardized methods, data structures, and communication patterns. By providing a range of SDKs, and offering thorough documentation, U5C enhances reusability, interoperability, and performance in blockchain integrations. Currently in its early stages, UTxO RPC is already being adopted by key projects in the Cardano ecosystem, including Lace, Mesh, Amaru, and many others. As an open-source initiative, it welcomes contributions from the community, fostering a collaborative approach to improving blockchain infrastructure. To support its ongoing development, maintenance, and enhancements, we are requesting funding for the following roles: 0.5 FTE blockchain developer and 0.125 FTE tech lead.
+BloxBean provides several essential Java libraries and tools for building applications on Cardano. These tools---CCL, Yaci, Yaci Store, and Yaci DevKit---require continuous maintenance and feature updates to meet the evolving needs of the Cardano ecosystem.
+
+To meet the growing demands of this project, we require an additional full-time developer for the next 12 months.
+
+The requested funds will support this additional developer, who will focus on the following areas:
+
+1. Ongoing Maintenance:
+
+- Ensure compatibility with new Cardano network upgrades.
+
+- Address bug fixes, performance improvements, and security issues.
+
+2. Feature Enhancements:
+
+- Implement new features based on community feedback.
+
+- Optimize the codebase to improve performance and scalability.
+
+3. Documentation and Developer Tools:
+
+- Expand the documentation with detailed guides, tutorials, and example code to assist developers.
+
+4. Community Engagement & Support:
+
+- Provide ongoing support via GitHub discussions, forums, and discord.
+
+- Engage with developers to understand their needs and ensure tools are optimized for real-world use.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -16,31 +42,49 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-UTxO RPC simplifies interactions with UTxO-based blockchains by providing a standardized interface for blockchain integrations. It enhances interoperability, reusability, and performance for developers, and has already seen adoption by major Cardano projects like Lace, Mesh, and Amaru. To fully unlock its potential for the Cardano community, UTxO RPC requires ongoing maintenance and enhancements. This proposal seeks funding to keep it active, up-to-date, and aligned with the evolving needs of the ecosystem.
+BloxBean has developed a suite of open-source Java tools essential for Cardano developers, including the Cardano Client Lib (CCL), Yaci, Yaci Store, and Yaci DevKit. These tools enable Java developers to interact seamlessly with the Cardano blockchain.
+
+Tools like Yaci DevKit are also used by non-Java teams to quickly set up a local Cardano devnet for testing purposes.
+
+As the Cardano ecosystem evolves, it is crucial to keep these tools up-to-date with the latest network changes, optimize their performance, and provide robust documentation and feature enhancements to ensure continued effectiveness.
+
+While BloxBean projects are supported by a small team of contributors, with the lead maintainer (Satya) being an employee of the Cardano Foundation, the growing demands for ongoing improvements require additional resources.
+
+This proposal seeks funding to hire one additional full-time developer through BloxBean to support the maintenance and enhancement efforts for the next 12 months.
+
+BloxBean Tools Overview
+
+\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\-\--
+
+**Cardano Client Lib (CCL):** A powerful off-chain Java SDK designed for Java/Scala/Kotlin developers to build and submit all types of transactions to the Cardano Blockchain. Used by many Java and Scala developers in the community.
+
+**Yaci:**
+
+A Java library implementing the Cardano mini-protocol. It allows any Java/Scala/Kotlin application to interact directly with the Cardano blockchain to retrieve real-time blockchain data.
+
+**Yaci Store:**
+
+A modular Java library designed for developers building custom indexing solutions. It also provides out-of-the-box indexers and includes a reward calculation component. It is used in key projects like the Rosetta Java exchange tool.
+
+**Yaci DevKit:**
+
+A comprehensive developer toolkit enabling faster iteration with a custom local Cardano network that can be easily created and destroyed. Used by both Java and non-Java projects.
 
 # Rationale
 
 ### Project Solution
 
-Securing funding for UTxO RPC ensures it remains actively maintained and continues to evolve with the Cardano ecosystem's needs. Ongoing updates, performance improvements, and new feature development will ensure the interface stays relevant and effective. This support will help simplify blockchain integrations, reduce complexity for developers, and improve overall performance, making it easier for new projects to adopt UTxO RPC. With continued maintenance, UTxO RPC can better serve the ecosystem and support long-term developer needs.
+- Long-Term Support: Ensure BloxBean tools remain compatible with future Cardano upgrades for a seamless developer experience.
+
+- Enhanced Developer Efficiency: Improve tools and documentation, making it easier for developers to build on Cardano using Java and other JVM languages.
+
+- Ecosystem Growth: Support the continued adoption and integration of BloxBean tools by Java developers, benefiting the overall Cardano ecosystem.
+
+- Open-Source: Maintain these tools as open-source projects, encouraging collaboration and contributions from the global developer community.
 
 ### Vendor Profile
 
-TxPipe is an active member of the Cardano ecosystem
-
-TxPipe has been developing open-source tools for the Cardano ecosystem for over 3 years and we're not going anywhere. Evidence of our commitment can be found by evaluating the continuous activity of our public code repositories.
-
-Experience developing in the Cardano ecosystem
-
-TxPipe has helped developed several dApps for the Cardano ecosystem. This experience allows us to evaluate the feasibility of the project and its potential benefit from a developer's perspective. We've also participated in development of chains using the released version of the IOG's Partnerchain SDK.
-
-Successful Catalyst proposals
-
-We have successfully completed several Catalyst proposals. This may serve as evidence that our team has the required capabilities to fulfill these type of projects.
-
-Development process will be public and open-source
-
-Both the output and the development process will be public and open-source. This approach provides an easy way for the Catalyst team and the Cardano community to evaluate the progress at each step of the process.
+The BloxBean team has extensive experience in developing and maintaining Cardano-related tools for Java developers. We have been maintaining these tools since 2021 and have been active in the Cardano ecosystem for several years, ensuring the tools remain up to date and functional for the community.
 
 ### Contract Management
 
@@ -106,8 +150,10 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [TxPipe UTxO RPC Github Repository](https://github.com/utxorpc)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b64565577986442d298)
+- [Java Tooling for Cardano dApps Development YouTube](https://www.youtube.com/watch?v=L1_E9Bc-f_Y)
+- [Yaci DevKit Demo YouTube](https://www.youtube.com/watch?v=lY7Ceuyc5qw)
+- [BloxBean GitHub Organization](https://github.com/bloxbean)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d214)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
