fix referenes and add new ones

--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0002-25-summit/EMI-0002-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0002-25-summit/EMI-0002-25.jsonld.md
@@ -164,8 +164,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
-- [Budget Management Smart Contracts TxPipe Audit Report](ipfs://)
-- [Budget Management Smart Contracts MLabs Audit Report](ipfs://bafybeihx2onjtlyyj5pqmpmi2z56vbhe365vhvthk2lqp57bhk4nuxyuea)
+- [Budget Management Smart Contracts TxPipe Audit Report](ipfs://bafybeiccnwejbgj43wo6hrlseckkkmprtoqc5cfuy2hesm6c6yealwho3e)
+- [Budget Management Smart Contracts MLabs Audit Report](ipfs://bafybeiah5fnjhda5hemj3qvaehc4mre3qllqzw2l7mkdsguytn4ftgafw4)
 
 # Authors
 
